# rubigo

./: Cargo.toml  LICENSE  README.md
docs/plans/: 2026-05-12-ferox-initial.md
src/: cache.rs  config.rs  core.rs  emit.rs  io.rs  lib.rs  main.rs  mutation.rs  mutator.rs  operator.rs  parser.rs  report.rs  runner.rs
tests/: integration_test.rs
tests/common/: mod.rs
