[package]
name = "rubigo"
version = "0.1.0"
edition = "2021"
description = "Mutation testing for Ruby — finds operators, flips them, and checks if your tests catch the changes."
license = "MIT"
repository = "https://github.com/halzy/rubigo"
keywords = ["ruby", "mutation-testing", "testing", "cli"]
categories = ["development-tools::testing"]

[dependencies]
tree-sitter = "0.26"
tree-sitter-ruby = "0.23"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
anyhow = "1"
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
